--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 #container {
-    width: 500px;
-    height: 300px;
+    position: relative;
+    width: 506px;
+    height: 306px;
     border: 1px solid #000;
+}
+
+.game-of-life-bg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: red;
 }
