Grid calculations, canvas settings, basic draw loop

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 #container {
     position: relative;
-    width: 506px;
-    height: 306px;
+    width: 505px;
+    height: 305px;
     border: 1px solid #000;
 }
 
 .game-of-life-bg {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     background-color: red;
 }
